--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
       	<div class="col-six tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright 2024 </span> 
-		        	<span>Design by <a href="https://www.linkedin.com/in/niranjanchanal/">Niranajn Chanal</a></span>	         	
+		        	<span>Design by <a href="https://www.linkedin.com/in/niranjanchanal/">Niranjan Chanal</a></span>	         	
 		         </div>		                  
 	      	</div>
 
