--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="O#mkar Resume.pdf" title="My Resume" class="button button-primary">View Resume</a>
+   			<a href="src/components/Resume/Niranjan_Resume.pdf" title="My Resume" class="button button-primary">View Resume</a>
    			
    		</div>   		
    	</div>
@@ -802,7 +802,7 @@
 
    			<h5>Call Me At</h5>
 
-			<p>Phone: +919731885330 
+			<p>Phone: +919731885330
 				
 			</p>
    		</div>
